# voker-burger

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md
backend/: .gitignore  README.md  agent.py  graph.py  main.py  order_service.py  pyproject.toml  tools.py
frontend/: README.md  index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  tailwind.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: chat.ts  client.ts  orders.ts
frontend/src/components/: ChatBubble.tsx  DriveThruIntercom.tsx  Header.tsx  OrderBoard.tsx  OrderTicket.tsx  Panel.tsx  StatsCounter.tsx  TypingIndicator.tsx
frontend/src/context/: ToastContext.tsx  VoiceContext.tsx
frontend/src/hooks/: useOrders.ts
frontend/src/lib/components/: DriveThruIntercom.svelte  Header.svelte  OrderBoard.svelte  OrderTicket.svelte  StatsCounter.svelte
frontend/src/lib/services/: audioService.ts
frontend/src/lib/stores/: chat.ts  orders.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/services/: audioService.ts
frontend/src/types/: orders.ts
